--- a/src/pages/carrito.astro
+++ b/src/pages/carrito.astro
@@ -1,60 +1,167 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
 ---
 
 <Layout>
     <section class="carro">
-        <div class="comprado">
-           <h1 class="titulo">Tu carrito:</h1>
-           <hr>
-            <div class="contenedor">
 
-                <div class="izq">
-                    <h1>izq</h1>
-               </div>
-    
-               <div class="dere">
-                    <h1>dere</h1>
-               </div>
+        <div class="productos">
+            <h1 class="cesta">CESTA</h1><hr>
+
+            <div class="carrito">
+
+                <div class="semillas">
+
+                    <div class="foto">
+                        <img src="https://entresemillas.com/2137-home_default/echinocactus-grusonii-semillas.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <p>Echinocactus grusonii - 8 semillas</p>
+                        <p class="precio">2,49 €</p>
+                    </div>
+
+                    <div class="borrar">
+                        <i class="ri-delete-bin-7-fill"></i>
+                    </div>
+                </div>
+
+                <div class="semillas">
+
+                    <div class="foto">
+                        <img src="https://entresemillas.com/1573-home_default/milenrama-sobre-200-semillas.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <p>Milenrama - 400 semillas</p>
+                        <p class="precio">2,35 €</p>
+                    </div>
+
+                    <div class="borrar">
+                        <i class="ri-delete-bin-7-fill"></i>
+                    </div>
+                </div>
+
+                <div class="semillas">
+
+                    <div class="foto">
+                        <img src="https://entresemillas.com/2286-home_default/pimiento-verde-italiano-semillas.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <p>Pimiento Verde Italiano - Semillas</p>
+                        <p class="precio">1,99 €</p>
+                    </div>
+
+                    <div class="borrar">
+                        <i class="ri-delete-bin-7-fill"></i>
+                    </div>
+                </div>
 
             </div>
-           
 
         </div>
+
+        <div class="pago">
+            <p class="mt">3 artículos (6,83 €)</p><hr>
+            <p class="mt">Total (impuestos inc.) 7,1 €</p>
+            <div class="boton">
+                <a href="/" class="bn11 mt">Tramitar pedido</a>
+            </div>
+        </div>
+
     </section>
 </Layout>
 
 <style>
-    .izq {
-        width: 50%;
-        text-align: center;
+    .bn11 {
+        display: inline-block;
+        padding: 10px 20px;
+     background-color: #668A4C;
+  border-radius: 2em;
+  box-sizing: border-box;
+  font-weight: 300;
+  color: #ffffff;
+  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+  text-align: center;
     }
-    .dere {
-        width: 50%;
-        text-align: center;
+    .mt {
+        margin-top: 10px;
     }
-    .contenedor {
+    .borrar {
         display: flex;
+        justify-content: end;
+        align-items: center;
+        width: 30%;
+        margin-right: 20px;
+        height: 100px;
+        font-size: 20px;
+        cursor: pointer;
     }
-    .titulo {
+    .precio {
+        color:#F24236;
+        font-weight:800;
+    }
+    .foto {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        width: 20%;
+        margin: 15px;
+    }
+    .info {
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: column;
+        width: 40%;
+        height: 100px;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+        vertical-align: middle;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .semillas {
+        display: flex;
+        height: 15vh;
+        width: 100%;
+        margin-top: 20px;
+    }
+    .cesta {
         text-align: center;
+    }
+    .productos {
+        background-color: white;
+        height: 80vh;
+        width: 40%;
+    }
+    .carrito {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .pago {
+        background-color: white;
+        height: 80vh;
+        width: 20%;
     }
     .carro {
         min-height: 80vh;
         width: 100%;
         background: url("https://entresemillas.com/img/madera1.jpg"); 
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         
     }
-
-    .comprado {
-        margin: 10px;
-        min-height: 70vh;
-        width: 50vw;
-        background: white;
-        border-radius: 1%;
+    .pago {
+        text-align: center;
     }
+
+
+
+
 </style>
