--- a/src/layouts/Tienda.astro
+++ b/src/layouts/Tienda.astro
@@ -36,6 +36,7 @@ import Layout from "./Layout.astro";
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
+            height: auto;
         }
     </style>
     
