--- a/src/pages/tienda/cactus.astro
+++ b/src/pages/tienda/cactus.astro
@@ -4,19 +4,30 @@ import Targeta from "../../components/Targeta.astro";
 import Tienda from "../../layouts/Tienda.astro";
 ---
 <Layout>
-    <div class="titulo">
-        <h1>Cactus</h1>
-    </div>
     <Tienda>
-        <Targeta img="https://entresemillas.com/2137-home_default/echinocactus-grusonii-semillas.jpg" nombre="Echinocactus grusonii - 8 semillas" precio="2,49 €" />
-        <Targeta img="https://entresemillas.com/2136-home_default/astrophytum-myriostigma-semillas.jpg" nombre="Astrophytum myriostigma - 10 semillas" precio="2,35 €" />
-        <Targeta img="https://entresemillas.com/1316-home_default/cactus-san-pedro-semillas.jpg" nombre="Cactus de San Pedro - 8 semillas" precio="2,49 €" />
-        <Targeta img="https://entresemillas.com/3576-home_default/stapelia-leendertziae-semillas.jpg" nombre="Stapelia leendertziae - 10 semillas" precio="2,99 €" />
-        <Targeta img="https://entresemillas.com/2135-home_default/acanthocalycium-klimpelianum-semillas.jpg" nombre="Acanthocalycium klimpelianum - 10 semillas" precio="2,45 €" />
-
+        <div class="cactus">
+            <div class="titulo">
+                <h1>Cactus</h1>
+            </div>
+            <Targeta img="https://entresemillas.com/2137-home_default/echinocactus-grusonii-semillas.jpg" nombre="Echinocactus grusonii - 8 semillas" precio="2,49 €" />
+            <Targeta img="https://entresemillas.com/2136-home_default/astrophytum-myriostigma-semillas.jpg" nombre="Astrophytum myriostigma - 10 semillas" precio="2,35 €" />
+            <Targeta img="https://entresemillas.com/1316-home_default/cactus-san-pedro-semillas.jpg" nombre="Cactus de San Pedro - 8 semillas" precio="2,49 €" />
+            <Targeta img="https://entresemillas.com/3576-home_default/stapelia-leendertziae-semillas.jpg" nombre="Stapelia leendertziae - 10 semillas" precio="2,99 €" />
+            <Targeta img="https://entresemillas.com/2135-home_default/acanthocalycium-klimpelianum-semillas.jpg" nombre="Acanthocalycium klimpelianum - 10 semillas" precio="2,45 €" />
+        </div>
+    </Tienda>
 </Layout>
 
 <style>
+    .cactus {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        height: auto;
+        height: 80vh;
+        width: 100%;
+    }
     h1 {
         text-align: center;
         padding-top: 10px;
