--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@
     /*Contenedor principal*/
     .pie {
         width: 100%;
-        background: #668A4C;
+        background: #694017;
         display: flex;
         align-items: center;
         justify-content: space-between;
