--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,16 +19,116 @@
                 </div>
             </div>
 
-            <a href="/tienda-otros">Otros</a>
-            <a href="/sobre-nosotros">Sobre nosotros</a>
+            <a href="/about">Sobre nosotros</a>
             <a href="../carrito"><i class="ri-shopping-cart-line carro"></i></a> 
-
         </div>
     </div>
-
     <div class="bx bx-menu" id="icono-menu"></div>
 </div>
+<div id="menu-movil" class="menu-movil">
+    <div class="menu-movil-item" id="semillas-item">
+    <a href="/">Inicio</a>
+        <span id="semillas">Semillas</span>
+        <div class="submenu">
+            <hr>
+            <a href="../tienda/arboles-frutales">- Arboles</a>
+            <a href="../tienda/florales">- Florales</a>
+            <a href="../tienda/hortalizas">- Hortalizas</a>
+            <a href="../tienda/cactus">- Cactus</a>
+            <hr>
+        </div>
+    </div>
+    <a href="#">Sobre nosotros</a>
+    <a href="../carrito">Carrito</a>
+    <div id="close-menu">&#10006;</div>
+</div>
+<script lang="js">
+    document.addEventListener("DOMContentLoaded", function () {
+        var semillasItem = document.getElementById("semillas-item");
+        var submenu = document.querySelector(".submenu");
+
+        semillasItem.addEventListener("click", function () {
+            submenu.style.display = submenu.style.display === "flex" ? "none" : "flex";
+        });
+
+        var mobileMenu = document.getElementById("menu-movil");
+        var iconoMenu = document.getElementById("icono-menu");
+        var closeMenu = document.getElementById("close-menu");
+
+        iconoMenu.addEventListener("click", function () {
+            mobileMenu.style.display = mobileMenu.style.display === "flex" ? "none" : "flex";
+        });
+
+        closeMenu.addEventListener("click", function () {
+            mobileMenu.style.display = "none";
+        });
+    });
+</script>
 <style>
+     #menu-movil {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 2;
+    }
+
+    #menu-movil a {
+        color: white;
+        font-size: 20px;
+        text-decoration: none;
+        margin-bottom: 20px;
+    }
+
+    #menu-movil a:hover {
+        color: #f1f1f1;
+    }
+    #close-menu {
+        color: white;
+        font-size: 30px;
+        cursor: pointer;
+        margin-top: 20px;
+    }
+
+    #close-menu:hover {
+        color: #f1f1f1;
+    }
+    .menu-movil-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #semillas {
+        color: white;
+        font-size: 20px;
+        cursor: pointer;
+        margin-bottom: 20px;
+    }
+
+    .submenu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .submenu a {
+        color: white;
+        font-size: 16px;
+        text-decoration: none;
+        margin: 5px 0;
+    }
+
+    #semillas:hover, .submenu a:hover {
+        color: #f1f1f1;
+    }
+
     #icono-menu {
 
     font-size: 30px;
@@ -37,6 +137,7 @@
     display: none;
     color: white;
     }
+
     .carro {
         transition: all ease .3s;
         cursor: pointer;
@@ -121,7 +222,7 @@
         color: #000000;
         text-align: center;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 23px;
         color: white;
         border-bottom: 3.5px solid transparent;
         transition: all ease .55s;
