--- a/src/layouts/Tienda.astro
+++ b/src/layouts/Tienda.astro
@@ -37,6 +37,7 @@ import Layout from "./Layout.astro";
             align-items: center;
             flex-wrap: wrap;
             height: auto;
+            margin-bottom: 2rem;
         }
     </style>
     
