--- a/src/components/TargetaCarro.astro
+++ b/src/components/TargetaCarro.astro
@@ -1,10 +1,8 @@
 ---
 const {img, nombre, precio} = Astro.props;
-
-
 ---
 
-<div class="tarjeta">
+<div class="targeta">
     <div class="imagen">
         <img src={img} alt="">
     </div>
@@ -12,15 +10,16 @@ const {img, nombre, precio} = Astro.props;
         <h3 class="nombre">{nombre}</h3>
         <p class="precio">{precio}</p>
     </div>
-    <div class="boton">
-        <a href="../carrito" class="bn11">Comprar <i class="ri-shopping-cart-line"></i></a>
-    </div>
+    <div><i class="ri-delete-bin-7-fill"></i></div>
 </div>
 
 <style>
     * {
         margin: 0;
         padding: 0;
+    }
+    .ri-delete-bin-7-fill {
+        cursor: pointer;
     }
     .texto {
         height: 33%;
@@ -37,21 +36,15 @@ const {img, nombre, precio} = Astro.props;
         justify-content: center;
         height: 33%;
     }
-    .tarjeta {
+    .targeta {
         display: flex;
         align-items: center;
         flex-direction: column;
-        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
-        width: 200px;
-        height: 350px;
+        width: 100px;
+        height: 275px;
         margin: 20px;
-        border-radius: 5%;
-        background-color: white;
         transition: all ease .55s;
-    }
-    .tarjeta:hover {
-        transform:translateY(-5px);
-        box-shadow: 30px 30px 30px rgba(0, 0, 0, 0.7);
+        background-color: white;
     }
     img {
         max-width: 100%;
@@ -60,39 +53,19 @@ const {img, nombre, precio} = Astro.props;
         font-style: italic;
         background-repeat: no-repeat;
         background-size: cover;
-        border-top-right-radius: 5%;
-        border-top-left-radius: 5%;
     }
     .precio {
         color:#F24236;
         font-weight:800;
         font-size: 15px;
     }
+ 
     
     .nombre {
         color: #696969;
         width: 100%;
     }
-    .bn11 {
-  display: inline-block;
-  padding: 0.5em 1.7em;
-  margin: 0 0.1em 0.1em 0;
-  border: 0.16em solid rgba(255, 255, 255, 0);
-  background-color: #668A4C;
-  border-radius: 2em;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  color: #ffffff;
-  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-  text-align: center;
-  transition: all 0.2s;
-}
 
-a.bn11:hover {
-  border-color: #506d3c;
-}
 
 
 
