--- a/src/pages/tienda/florales.astro
+++ b/src/pages/tienda/florales.astro
@@ -22,6 +22,10 @@ import Tienda from "../../layouts/Tienda.astro";
 </Layout>
 
 <style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
     h1 {
         text-align: center;
         padding-top: 10px;
