--- a/src/pages/tienda/hortalizas.astro
+++ b/src/pages/tienda/hortalizas.astro
@@ -8,10 +8,10 @@ import Tienda from "../../layouts/Tienda.astro";
         <h1>Hortalizas</h1>
     </div>
     <Tienda>
-        <Targeta img="https://entresemillas.com/2286-home_default/pimiento-verde-italiano-semillas.jpg" nombre="Pimiento Verde Italiano - Semillas" precio="1,99 €" />
-        <Targeta img="https://entresemillas.com/2283-home_default/nabo-de-mesa-bola-nieve-semillas.jpg" nombre="Nabo de mesa Bola de Nieve - semillas" precio="1,99 €" />
+        <Targeta img="https://entresemillas.com/2286-home_default/pimiento-verde-italiano-semillas.jpg" nombre="Pimiento Verde Italiano - 20 semillas" precio="1,99 €" />
+        <Targeta img="https://entresemillas.com/2283-home_default/nabo-de-mesa-bola-nieve-semillas.jpg" nombre="Nabo de mesa Bola de Nieve - 30 semillas" precio="1,99 €" />
         <Targeta img="https://entresemillas.com/3355-home_default/pimiento-dulce-california.jpg" nombre="Pimiento Dulce California - 90 semillas" precio="1,99 €" />
-        <Targeta img="https://entresemillas.com/1416-home_default/cucamelon-melothria-scabra-semillas.jpg" nombre="Cucamelón - Semillas" precio="2,35 €" />
+        <Targeta img="https://entresemillas.com/1416-home_default/cucamelon-melothria-scabra-semillas.jpg" nombre="Cucamelón -20 semillas" precio="2,35 €" />
         <Targeta img="https://entresemillas.com/2072-home_default/lulo-sobre-8-semillas.jpg" nombre="Lulo - 20 semillas" precio="2,35 €" />
         <Targeta img="https://entresemillas.com/2618-home_default/tomate-marmande.jpg" nombre="Tomate Marmande - 120 semillas" precio="1,99 €" />
         <Targeta img="https://entresemillas.com/2082-home_default/jicama.jpg" nombre="Jicama - 8 semillas" precio="2,99 €" />
@@ -22,6 +22,10 @@ import Tienda from "../../layouts/Tienda.astro";
 </Layout>
 
 <style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
     h1 {
         text-align: center;
         padding-top: 10px;
