--- a/src/components/Targeta.astro
+++ b/src/components/Targeta.astro
@@ -1,9 +1,9 @@
 ---
-const {img, nombre, precio} = Astro.props;
+const {img, nombre, precio} = Astro.props; // parametros para cada targeta
 
 
 ---
-
+<!-- html de targeta para mostrar productos -->
 <div class="tarjeta">
     <div class="imagen">
         <img src={img} alt="">
