--- a/src/components/TargetaCarro.astro
+++ b/src/components/TargetaCarro.astro
@@ -1,7 +1,7 @@
 ---
-const {img, nombre, precio} = Astro.props;
+const {img, nombre, precio} = Astro.props; // parametros 
 ---
-
+<!-- html de targeta usada en el carrito para mostrar productos añadidos -->
 <div class="targeta">
     <div class="imagen">
         <img src={img} alt="">
