--- a/src/layouts/Layoutmd.astro
+++ b/src/layouts/Layoutmd.astro
@@ -20,7 +20,7 @@ import Header from '../components/Header.astro';
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato&family=Nunito:wght@500&family=Poppins:wght@100&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 	</head>
-	<body>
+	<body>  <!--  layout para el "sobre nosotros" usando MarkDown -->
 		<Header />
         <div class="centrar">
             <div class="md">
