--- a/src/layouts/Tienda.astro
+++ b/src/layouts/Tienda.astro
@@ -1,6 +1,4 @@
 ---
-import Targeta from "../components/Targeta.astro";
-import Layout from "./Layout.astro";
 
 ---
 
@@ -17,7 +15,7 @@ import Layout from "./Layout.astro";
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato&family=Nunito:wght@500&family=Poppins:wght@100&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 	</head>
-    <section class="body">
+    <section class="body"> <!-- layout para mostrar los productos en la tienda -->
        <div class="productos">
             <slot />
        </div>
