--- a/src/pages/carrito.astro
+++ b/src/pages/carrito.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import TargetaCarro from "../components/TargetaCarro.astro";
 ---
-
+<!-- pagina para mostrar los prodcutos del carrito -->
 <Layout>
     <section class="carro">
         <div class="carrito">
