--- a/src/pages/tienda/arboles-frutales.astro
+++ b/src/pages/tienda/arboles-frutales.astro
@@ -3,6 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 import Targeta from "../../components/Targeta.astro";
 import Tienda from "../../layouts/Tienda.astro";
 ---
+<!-- pagina con productos de la tienda (arboles) -->
 <Layout>
     <div class="titulo">
         <h1>Arboles</h1>
